# probable-pancake

./: README.md
Customer/: .gitignore  README.md  pyproject.toml
Customer/src/customer-application/entity/: Inventory.py  Order.py  OrderInventory.py
Customer/src/customer-application/use_case/: AbstractOrderInventoryService.py  AbstractOrderService.py  InventoryHandler.py
Customer/src/democustomerapi/: requirements.txt
Customer/src/democustomerapi/api/: IRouterBuilder.py  InventoryRouter.py  InventoryRouterBuilder.py  OrderRouter.py  OrderRouterBuilder.py
Customer/src/democustomerapi/entity/: Inventory.py  Order.py  OrderInventory.py  __init__.py
Customer/src/democustomerapi/schema/: ItemIdentifier.py  ItemQuantity.py  NewInventoryDto.py  NewOrderDto.py  OrderDto.py
Customer/src/democustomerapi/use_case/: AbstractInventoryService.py  AbstractOrderInventoryService.py  AbstractOrderService.py  InventoryHandler.py  OrderHandler.py
Customer/tests/: TemporaryInventoryService.py  TemporaryOrderInventoryService.py  TemporaryOrderService.py  requirements.txt  test_InventoryApi.py  test_InventoryHandler.py  test_OrderApi.py  test_OrderHandler.py
